--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile "com.android.support:support-v13:24.1.1"
     compile "com.android.support:cardview-v7:24.1.1"
     compile "com.android.support:appcompat-v7:24.1.1"
+    compile "com.clarifai:clarifai-api-java:1.2.0"
 }
 
 // The sample build uses multiple directories to
